# libjson-c

./: .gitignore  CMakeLists.txt  Makefile
src/: clear.c  intern_json.h  is.c  item.c  json.c  json.h  pack.c  remove_comments.c  trim.c
src/parse/: base.c  list.c  parse.c  types.c
src/serialize/: base.c  object.c
